SERVER-49694: fix latency measurement in RSM; change latency measurement for command responses to Microseconds