src/mongo/s/commands/cluster_multicast_cmd.cpp
@@ -39,6 +39,7 @@
 #include "mongo/s/client/shard_registry.h"
 #include "mongo/s/commands/cluster_commands_gen.h"
 #include "mongo/s/grid.h"
+#include "mongo/util/duration.h"
 
 namespace mongo {
 namespace {
@@ -132,8 +133,9 @@ public:
 
                 if (CommandHelpers::appendCommandStatusNoThrow(subbob, response.status)) {
                     subbob.append("data", response.data);
-                    if (response.elapsedMillis) {
-                        subbob.append("elapsedMillis", response.elapsedMillis->count());
+                    if (response.elapsed) {
+                        subbob.append("elapsedMillis",
+                                      durationCount<Milliseconds>(*response.elapsed));
                     }
                 }
             }
